--- a/.github/workflows/bygg-og-deploy-storybook.yml
+++ b/.github/workflows/bygg-og-deploy-storybook.yml
@@ -49,5 +49,5 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: dev-gcp
-          RESOURCE: .nais/nais-dev-gcp-storybook.yaml
+          RESOURCE: nais/nais-dev-gcp-storybook.yaml
           VAR: image=${{ needs.build.outputs.image }}
