Fjerning av komponenter (#1216)
* fjernet DelLenke, SendVarselModal og OpprettelseFullfortVeileder

* Fjernet opprettelseFullførtArbeidsgiver

* Fjernet utfylles av

* oppdaterte tekster

* Lagt til Stoorbook for å lettere vise avtale statuser

* lagt til Storybook i tiltaksgjennomforing

* lagt til yml

* oppdatert Arbeidsgiver statuser

* oppdaterte tekster og fikset bygg feil

* fikset og fjernet commentarer

* fikset i tilbakemeldinger

* fjernet test som ikke blir brukt

* fjernet .dockerignore

* lagt til yml i .prettierignore

* lagt til nginx.conf

* fjernet skrivefeil

* Fikset litt på stories så flere av statusene blir tatt med

* fikset litt på AvtaleStatuserVeileder

* lagt på style prop på Innholdsboks

* lagt til nye tekst endringer og litt styling

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /coverage
 # production
 /server/dist
+/storybook-static
 /dist
 # misc
 .DS_Store
@@ -15,6 +16,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+
 .idea/
 .vscode
 
