--- a/.github/workflows/bygg-og-deploy-storybook.yml
+++ b/.github/workflows/bygg-og-deploy-storybook.yml
@@ -31,6 +31,7 @@ jobs:
         id: docker-build-push
         with:
           team: arbeidsgiver
+          tag: tiltaksgjennomforing-storybook
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
           dockerfile: StorybookDockerfile
