feat. Proxy modia redirect lenker til modiacontextholder med obo token

--- a/nais/dev-gcp-intern.yaml
+++ b/nais/dev-gcp-intern.yaml
@@ -4,7 +4,8 @@
 "login-url": "/oauth2/login?redirect=/tiltaksgjennomforing"
 "logout-url": "/oauth2/logout"
 "stillingstitler-url": "http://tiltak-stillingstitler"
-"api-scope": "api://dev-fss.arbeidsgiver.tiltak-proxy/.default"
+"tiltak-proxy-api-scope": "api://dev-fss.arbeidsgiver.tiltak-proxy/.default"
+"modiacontextholder-api-scope": "api://dev-gcp.personoversikt.modiacontextholder/.default"
 "proxy-cluster": "dev-fss"
 "aad-redirect-url": "https://tiltaksgjennomforing.intern.dev.nav.no/oauth2/callback"
 "decorator-internal": "https://internarbeidsflatedecorator-q0.dev.adeo.no"
