--- a/server/package.json
+++ b/server/package.json
@@ -6,9 +6,11 @@
     "scripts": {
         "build": "esbuild src/server.ts --bundle --platform=node --outfile=../dist/server/index.cjs --packages=external",
         "postbuild": "cp -r node_modules ../dist/server",
-        "start": "node ../dist/server/index.cjs --openssl-legacy-provider",
-        "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true npm start",
-        "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true npm start"
+        "server": "node ../dist/server/index.cjs --openssl-legacy-provider",
+        "start": "echo 'Use npm run start:labs, npm run start:ekstern or npm run start:intern'",
+        "start:labs": "cross-env LABS=true npm run server",
+        "start:ekstern": "cross-env ENABLE_EXTERNAL_MENU=true npm run server",
+        "start:intern": "cross-env ENABLE_INTERNAL_MENU=true INTERN_INGRESS=true npm run server"
     },
     "dependencies": {
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^6.2.2",
@@ -16,8 +18,6 @@
         "@navikt/oasis": "^3.2.2",
         "axios": "^1.6.7",
         "cookie-parser": "^1.4.6",
-        "express-async-handler": "1.2.0",
-        "express-http-proxy": "^2.0.0",
         "helmet": "^7.1.0",
         "http-proxy-middleware": "^3.0.0",
         "jsdom": "^24.0.0"
@@ -25,7 +25,6 @@
     "devDependencies": {
         "@types/cookie-parser": "^1.4.7",
         "@types/express": "^4.17.17",
-        "@types/express-http-proxy": "^1.6.3",
         "@types/fs-extra": "^11.0.1",
         "@types/jsdom": "^21.1.1",
         "cross-env": "^7.0.3",
