feat. Godkjenn på vegne av arbeidsgiver og deltaker
* Forenkelt logikk i godkjenning på vegne av
* La til støtte for godkjenning på vegne av Arena-avtaler
* Fjernet godkjenning på vegne av arbeidsgiver for sommerjobb

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.9.0",
         "@navikt/arbeidsgiver-notifikasjon-widget": "^6.5.9",
         "@navikt/bedriftsmeny": "^6.13.0",
         "@navikt/ds-css": "^6.3.6",
@@ -42,11 +43,13 @@
         "react-collapse": "^5.1.1",
         "react-cookie": "^7.0.2",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.53.0",
         "react-loading-skeleton": "^3.4.0",
         "react-responsive": "^10.0.0",
         "react-router-dom": "^6.22.0",
         "react-select": "^5.8.0",
-        "swr": "^2.2.4"
+        "swr": "^2.2.4",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@sentry/cli": "^2.28.5",
