--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ yarn-error.log*
 .firebase/
 
 debug.log
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth
