--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "@navikt/nav-dekoratoren-moduler": "^2.1.5",
         "@navikt/oasis": "^3.2.2",
         "axios": "1.7.7",
+        "compression": "^1.7.4",
         "cookie-parser": "1.4.7",
         "express": "4.21.1",
         "helmet": "8.0.0",
@@ -24,6 +25,7 @@
         "jsdom": "25.0.1"
     },
     "devDependencies": {
+        "@types/compression": "^1.7.5",
         "@types/cookie-parser": "^1.4.7",
         "@types/express": "5.0.0",
         "@types/jsdom": "^21.1.7",
