--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
         "@navikt/ds-react": "^6.3.6",
         "@navikt/navspa": "^6.0.1",
         "amplitude-js": "^8.21.9",
-        "axios": "^1.6.7",
-        "axios-retry": "^4.0.0",
+        "axios": "1.7.7",
+        "axios-retry": "4.5.0",
         "classnames": "^2.5.1",
         "lodash.debounce": "^4.0.8",
         "lodash.isequal": "^4.5.0",
@@ -39,62 +39,54 @@
         "lodash.sortby": "^4.7.0",
         "moment": "^2.30.1",
         "prop-types": "^15.7.2",
-        "react": "^18.2.0",
+        "react": "18.3.1",
         "react-collapse": "^5.1.1",
         "react-cookie": "^7.0.2",
-        "react-dom": "^18.2.0",
+        "react-dom": "18.3.1",
         "react-hook-form": "^7.53.0",
         "react-loading-skeleton": "^3.4.0",
         "react-responsive": "^10.0.0",
         "react-router-dom": "^6.22.0",
         "react-select": "^5.8.0",
-        "swr": "^2.2.4",
-        "zod": "^3.23.8"
+        "swr": "2.2.5",
+        "zod": "3.23.8"
     },
     "devDependencies": {
         "@sentry/cli": "^2.28.5",
         "@sentry/react": "^7.100.1",
-        "@storybook/addon-essentials": "^8.0.9",
-        "@storybook/addon-interactions": "^8.0.9",
-        "@storybook/addon-links": "^8.0.9",
-        "@storybook/addon-onboarding": "^8.0.9",
-        "@storybook/blocks": "^8.0.9",
-        "@storybook/react": "^8.0.9",
-        "@storybook/react-vite": "^8.0.9",
-        "@storybook/test": "^8.0.9",
+        "@storybook/addon-essentials": "8.3.5",
+        "@storybook/blocks": "8.3.5",
+        "@storybook/react": "8.3.5",
+        "@storybook/react-vite": "8.3.5",
+        "@storybook/test": "8.3.5",
         "@testing-library/react": "^14.2.1",
         "@types/amplitude-js": "^8.16.5",
-        "@types/classnames": "^2.3.0",
         "@types/lodash.debounce": "^4.0.9",
         "@types/lodash.isequal": "^4.5.8",
-        "@types/lodash.isnil": "^4.0.9",
         "@types/lodash.omit": "^4.5.9",
         "@types/lodash.pickby": "^4.6.9",
         "@types/lodash.sortby": "^4.7.9",
         "@types/node": "^20.11.17",
-        "@types/react": "^18.2.55",
+        "@types/react": "18.3.11",
         "@types/react-collapse": "^5.0.4",
-        "@types/react-dom": "^18.2.19",
+        "@types/react-dom": "18.3.1",
         "@types/react-responsive": "^8.0.8",
         "@types/react-router-dom": "^5.3.3",
-        "@vitejs/plugin-react": "^4.2.1",
+        "@vitejs/plugin-react": "4.3.2",
         "husky": "^9.0.10",
-        "jsdom": "^24.0.0",
+        "jsdom": "25.0.1",
         "less": "^4.2.0",
-        "lint-staged": "^15.2.2",
+        "lint-staged": "15.2.10",
         "prettier": "^3.2.5",
-        "storybook": "^8.0.9",
+        "storybook": "8.3.5",
         "svgo": "^3.2.0",
-        "typescript": "^5.3.3",
-        "vite": "^5.1.1",
+        "typescript": "5.6.3",
+        "vite": "5.4.9",
         "vite-plugin-svgr": "^4.2.0",
-        "vitest": "^1.2.2"
+        "vitest": "2.1.3"
     },
     "lint-staged": {
         "*.{ts,tsx,js,jsx,mjs,less,css,md}": "npm run prettier:fix",
         "*.svg": "npm run svgo"
-    },
-    "optionalDependencies": {
-        "@rollup/rollup-linux-x64-gnu": "^4.10.0"
     }
 }
