--- a/server/package.json
+++ b/server/package.json
@@ -16,19 +16,19 @@
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^6.2.2",
         "@navikt/nav-dekoratoren-moduler": "^2.1.5",
         "@navikt/oasis": "^3.2.2",
-        "axios": "^1.6.7",
-        "cookie-parser": "^1.4.6",
-        "helmet": "^7.1.0",
-        "http-proxy-middleware": "^3.0.0",
-        "jsdom": "^24.0.0"
+        "axios": "1.7.7",
+        "cookie-parser": "1.4.7",
+        "express": "4.21.1",
+        "helmet": "8.0.0",
+        "http-proxy-middleware": "3.0.3",
+        "jsdom": "25.0.1"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.7",
-        "@types/express": "^4.17.17",
-        "@types/fs-extra": "^11.0.1",
-        "@types/jsdom": "^21.1.1",
+        "@types/express": "5.0.0",
+        "@types/jsdom": "^21.1.7",
         "cross-env": "^7.0.3",
-        "esbuild": "^0.20.0",
-        "typescript": "^5.0.4"
+        "esbuild": "0.24.0",
+        "typescript": "5.6.3"
     }
 }
