--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "axios": "1.7.7",
         "axios-retry": "4.5.0",
         "classnames": "^2.5.1",
+        "date-fns": "^3.6.0",
         "lodash.debounce": "^4.0.8",
         "lodash.isequal": "^4.5.0",
         "lodash.sortby": "^4.7.0",
