--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
     "dependencies": {
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^6.2.2",
         "@navikt/nav-dekoratoren-moduler": "^2.1.5",
-        "@navikt/oasis": "^3.2.2",
+        "@navikt/oasis": "3.6.0",
         "axios": "1.7.7",
         "compression": "^1.7.4",
         "cookie-parser": "1.4.7",
