--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "devDependencies": {
         "@sentry/cli": "^2.28.5",
         "@sentry/react": "^7.100.1",
-        "@storybook/addon-essentials": "8.3.5",
-        "@storybook/blocks": "8.3.5",
-        "@storybook/react": "8.3.5",
-        "@storybook/react-vite": "8.3.5",
-        "@storybook/test": "8.3.5",
+        "@storybook/addon-essentials": "^8.6.9",
+        "@storybook/blocks": "^8.6.9",
+        "@storybook/react": "^8.6.9",
+        "@storybook/react-vite": "^8.6.9",
+        "@storybook/test": "^8.6.9",
         "@testing-library/react": "^14.2.1",
         "@types/lodash.debounce": "^4.0.9",
         "@types/lodash.isequal": "^4.5.8",
@@ -70,7 +70,7 @@
         "less": "^4.2.0",
         "lint-staged": "15.2.10",
         "prettier": "^3.2.5",
-        "storybook": "8.3.5",
+        "storybook": "^8.6.9",
         "svgo": "^3.2.0",
         "typescript": "5.6.3",
         "vite": "5.4.9",
