chore. husky deprecated pre-commit
chore. replaced deprecated lodash.isequal with node:util.isDeepStrictEqual

fix. prettify lint

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "vite build",
         "checknpm": "echo \"$npm_execpath\" | grep -q \"npm-cli\\.js$\" || (echo '⚠️ Bruk npm ellers får du sparken! ⚠️' && echo && exit 1)",
         "preinstall": "$npm_execpath --silent run checknpm",
-        "prepare": "husky install",
+        "prepare": "husky",
         "prettier": "prettier -c .",
         "prettier:fix": "prettier -w .",
         "release": "node sentry.js",
@@ -33,7 +33,6 @@
         "classnames": "^2.5.1",
         "date-fns": "^3.6.0",
         "lodash.debounce": "^4.0.8",
-        "lodash.isequal": "^4.5.0",
         "prop-types": "^15.7.2",
         "react": "18.3.1",
         "react-collapse": "^5.1.1",
@@ -57,7 +56,6 @@
         "@storybook/test": "^8.6.9",
         "@testing-library/react": "^14.2.1",
         "@types/lodash.debounce": "^4.0.9",
-        "@types/lodash.isequal": "^4.5.8",
         "@types/node": "^20.11.17",
         "@types/react": "18.3.11",
         "@types/react-collapse": "^5.0.4",
