--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "axios-retry": "4.5.0",
         "classnames": "^2.5.1",
         "date-fns": "^3.6.0",
+        "fast-deep-equal": "^3.1.3",
         "lodash.debounce": "^4.0.8",
         "prop-types": "^15.7.2",
         "react": "18.3.1",
