--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
-        "@hookform/resolvers": "^4.1.3",
+        "@hookform/resolvers": "3.10.0",
         "@navikt/arbeidsgiver-notifikasjon-widget": "^7.2.3",
         "@navikt/bedriftsmeny": "^7.0.5",
         "@navikt/ds-css": "^7.17.4",
-        "@navikt/ds-icons": "^3.4.3",
         "@navikt/ds-react": "^7.17.4",
         "@navikt/navspa": "^6.0.1",
         "axios": "1.7.7",
@@ -34,43 +33,43 @@
         "date-fns": "^3.6.0",
         "fast-deep-equal": "^3.1.3",
         "lodash.debounce": "^4.0.8",
-        "prop-types": "^15.7.2",
+        "prop-types": "^15.8.1",
         "react": "18.3.1",
         "react-collapse": "^5.1.1",
-        "react-cookie": "^7.0.2",
+        "react-cookie": "^7.2.2",
         "react-dom": "18.3.1",
-        "react-hook-form": "^7.53.0",
-        "react-loading-skeleton": "^3.4.0",
-        "react-responsive": "^10.0.0",
-        "react-router-dom": "^6.22.0",
-        "react-select": "^5.8.0",
+        "react-hook-form": "^7.54.2",
+        "react-loading-skeleton": "^3.5.0",
+        "react-responsive": "^10.0.1",
+        "react-router-dom": "^6.30.0",
+        "react-select": "^5.10.1",
         "swr": "2.2.5",
-        "zod": "3.23.8"
+        "zod": "^3.24.2"
     },
     "devDependencies": {
-        "@sentry/cli": "^2.28.5",
-        "@sentry/react": "^7.100.1",
-        "@storybook/addon-essentials": "^8.6.9",
+        "@sentry/cli": "^2.43.0",
+        "@sentry/react": "^7.120.3",
+        "@storybook/addon-essentials": "^8.6.10",
         "@storybook/blocks": "^8.6.9",
         "@storybook/react": "^8.6.9",
-        "@storybook/react-vite": "^8.6.9",
+        "@storybook/react-vite": "^8.6.10",
         "@storybook/test": "^8.6.9",
-        "@testing-library/react": "^14.2.1",
+        "@testing-library/react": "^14.3.1",
         "@types/lodash.debounce": "^4.0.9",
-        "@types/node": "^20.11.17",
+        "@types/node": "^20.17.28",
         "@types/react": "18.3.11",
         "@types/react-collapse": "^5.0.4",
         "@types/react-dom": "18.3.1",
         "@types/react-responsive": "^8.0.8",
         "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "4.3.4",
-        "husky": "^9.0.10",
+        "husky": "^9.1.7",
         "jsdom": "25.0.1",
-        "less": "^4.2.0",
+        "less": "^4.2.2",
         "lint-staged": "15.2.10",
-        "prettier": "^3.2.5",
-        "storybook": "^8.6.9",
-        "svgo": "^3.2.0",
+        "prettier": "^3.5.3",
+        "storybook": "^8.6.10",
+        "svgo": "^3.3.2",
         "typescript": "5.6.3",
         "vite": "6.2.3",
         "vite-plugin-svgr": "^4.3.0",
