--- a/package.json
+++ b/package.json
@@ -22,38 +22,38 @@
     },
     "dependencies": {
         "@hookform/resolvers": "3.10.0",
-        "@navikt/arbeidsgiver-notifikasjon-widget": "^7.2.3",
+        "@navikt/arbeidsgiver-notifikasjon-widget": "latest",
         "@navikt/bedriftsmeny": "^7.0.5",
-        "@navikt/ds-css": "^7.17.4",
-        "@navikt/ds-react": "^7.17.4",
+        "@navikt/ds-css": "^7.18.0",
+        "@navikt/ds-react": "^7.18.0",
         "@navikt/navspa": "^6.0.1",
-        "axios": "1.7.7",
+        "axios": "^1.8.4",
         "axios-retry": "4.5.0",
         "classnames": "^2.5.1",
-        "date-fns": "^3.6.0",
+        "date-fns": "^4.1.0",
         "fast-deep-equal": "^3.1.3",
         "lodash.debounce": "^4.0.8",
         "prop-types": "^15.8.1",
-        "react": "18.3.1",
+        "react": "^18.3.1",
         "react-collapse": "^5.1.1",
         "react-cookie": "^7.2.2",
         "react-dom": "18.3.1",
-        "react-hook-form": "^7.54.2",
+        "react-hook-form": "^7.55.0",
         "react-loading-skeleton": "^3.5.0",
         "react-responsive": "^10.0.1",
         "react-router-dom": "^6.30.0",
         "react-select": "^5.10.1",
-        "swr": "2.2.5",
+        "swr": "^2.3.3",
         "zod": "^3.24.2"
     },
     "devDependencies": {
         "@sentry/cli": "^2.43.0",
         "@sentry/react": "^7.120.3",
-        "@storybook/addon-essentials": "^8.6.10",
-        "@storybook/blocks": "^8.6.9",
-        "@storybook/react": "^8.6.9",
-        "@storybook/react-vite": "^8.6.10",
-        "@storybook/test": "^8.6.9",
+        "@storybook/addon-essentials": "^8.6.11",
+        "@storybook/blocks": "^8.6.11",
+        "@storybook/react": "^8.6.11",
+        "@storybook/react-vite": "^8.6.11",
+        "@storybook/test": "^8.6.11",
         "@testing-library/react": "^14.3.1",
         "@types/lodash.debounce": "^4.0.9",
         "@types/node": "^20.17.28",
@@ -64,16 +64,16 @@
         "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "4.3.4",
         "husky": "^9.1.7",
-        "jsdom": "25.0.1",
+        "jsdom": "^26.0.0",
         "less": "^4.2.2",
-        "lint-staged": "15.2.10",
+        "lint-staged": "^15.5.0",
         "prettier": "^3.5.3",
-        "storybook": "^8.6.10",
+        "storybook": "^8.6.11",
         "svgo": "^3.3.2",
-        "typescript": "5.6.3",
-        "vite": "6.2.3",
+        "typescript": "^5.8.2",
+        "vite": "^6.2.4",
         "vite-plugin-svgr": "^4.3.0",
-        "vitest": "3.0.9"
+        "vitest": "^3.1.1"
     },
     "lint-staged": {
         "*.{ts,tsx,js,jsx,mjs,less,css,md}": "npm run prettier:fix",
