--- a/nais/dev-gcp-ekstern.yaml
+++ b/nais/dev-gcp-ekstern.yaml
@@ -2,7 +2,7 @@
 "miljo": "dev-gcp"
 "api-gw-url": "https://tiltak-proxy.dev-fss-pub.nais.io"
 "login-url": "/oauth2/login?redirect=/tiltaksgjennomforing"
-"logout-url": "/oauth2/logout"
+"logout-url": "/oauth2/logout?redirect=/tiltaksgjennomforing"
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
 "proxy-cluster": "dev-fss"
