--- a/package.json
+++ b/package.json
@@ -57,11 +57,9 @@
         "@testing-library/react": "^16.2.0",
         "@types/lodash.debounce": "^4.0.9",
         "@types/node": "^20.17.28",
-        "@types/react": "18.3.11",
+        "@types/react": "^18.3.11",
         "@types/react-collapse": "^5.0.4",
         "@types/react-dom": "18.3.1",
-        "@types/react-responsive": "^9.0.0",
-        "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "4.3.4",
         "husky": "^9.1.7",
         "jsdom": "^26.0.0",
