--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,12 @@
     "dependencies": {
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^6.5.9",
         "@navikt/nav-dekoratoren-moduler": "^2.1.6",
-        "@navikt/oasis": "3.6.0",
+        "@navikt/oasis": "3.7",
         "axios": "^1.8.4",
         "compression": "^1.8.0",
         "cookie-parser": "1.4.7",
         "express": "4.21.2",
-        "helmet": "8.0.0",
+        "helmet": "^8.1.0",
         "http-proxy-middleware": "3.0.3",
         "jsdom": "25.0.1"
     },
@@ -30,7 +30,7 @@
         "@types/express": "5.0.0",
         "@types/jsdom": "^21.1.7",
         "cross-env": "^7.0.3",
-        "esbuild": "0.24.0",
-        "typescript": "5.6.3"
+        "esbuild": "^0.25.2",
+        "typescript": "^5.8.2"
     }
 }
