--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
         "axios": "^1.8.4",
         "compression": "^1.8.0",
         "cookie-parser": "1.4.7",
-        "express": "4.21.2",
+        "express": "^5.1.0",
         "helmet": "^8.1.0",
         "http-proxy-middleware": "3.0.3",
         "jsdom": "25.0.1"
@@ -27,7 +27,7 @@
     "devDependencies": {
         "@types/compression": "^1.7.5",
         "@types/cookie-parser": "^1.4.8",
-        "@types/express": "5.0.0",
+        "@types/express": "^5.0.1",
         "@types/jsdom": "^21.1.7",
         "cross-env": "^7.0.3",
         "esbuild": "^0.25.2",
