--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
         "axios-retry": "4.5.0",
         "classnames": "^2.5.1",
         "date-fns": "^4.1.0",
-        "fast-deep-equal": "^3.1.3",
         "lodash.debounce": "^4.0.8",
+        "lodash.isequal": "^4.5.0",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-collapse": "^5.1.1",
@@ -56,6 +56,7 @@
         "@storybook/test": "^8.6.11",
         "@testing-library/react": "^16.2.0",
         "@types/lodash.debounce": "^4.0.9",
+        "@types/lodash.isequal": "^4.5.8",
         "@types/node": "^22.13.16",
         "@types/react": "^18.3.11",
         "@types/react-collapse": "^5.0.4",
