--- a/server/package.json
+++ b/server/package.json
@@ -13,24 +13,24 @@
         "start:intern": "cross-env ENABLE_INTERNAL_MENU=true INTERN_INGRESS=true npm run server"
     },
     "dependencies": {
-        "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^6.2.2",
-        "@navikt/nav-dekoratoren-moduler": "^2.1.5",
-        "@navikt/oasis": "3.6.0",
-        "axios": "1.7.7",
-        "compression": "^1.7.4",
+        "@navikt/arbeidsgiver-notifikasjon-widget": "^7.2.3",
+        "@navikt/nav-dekoratoren-moduler": "^3.2.2",
+        "@navikt/oasis": "3.7",
+        "axios": "^1.8.4",
+        "compression": "^1.8.0",
         "cookie-parser": "1.4.7",
-        "express": "4.21.2",
-        "helmet": "8.0.0",
+        "express": "^5.1.0",
+        "helmet": "^8.1.0",
         "http-proxy-middleware": "3.0.3",
-        "jsdom": "25.0.1"
+        "jsdom": "^26.0.0"
     },
     "devDependencies": {
         "@types/compression": "^1.7.5",
-        "@types/cookie-parser": "^1.4.7",
-        "@types/express": "5.0.0",
+        "@types/cookie-parser": "^1.4.8",
+        "@types/express": "^5.0.1",
         "@types/jsdom": "^21.1.7",
         "cross-env": "^7.0.3",
-        "esbuild": "0.24.0",
-        "typescript": "5.6.3"
+        "esbuild": "^0.25.2",
+        "typescript": "^5.8.2"
     }
 }
