Legg til logg-destinasjoner
Vi ønsker å eksportere loggene våre til kibana
selv etter 1. juni!

Nais-plattformen har deprekert elasticsearch, og
derfor må vi eksplisitt legge til elastic til
listen over logg-destinasjoner i nais-yaml'en

--- a/nais/nais-gcp-ekstern.yaml
+++ b/nais/nais-gcp-ekstern.yaml
@@ -48,6 +48,14 @@ spec:
       level: Level4
       locale: nb
       autoLogin: false
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: nodejs
+    logging:
+      destinations:
+        - id: elastic
+        - id: loki
   accessPolicy:
     outbound:
       rules:
