--- a/package.json
+++ b/package.json
@@ -1,81 +1,78 @@
 {
-    "name": "tiltaksgjennomforing",
-    "version": "0.1.0",
-    "private": true,
-    "homepage": "/tiltaksgjennomforing",
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "checknpm": "echo \"$npm_execpath\" | grep -q \"npm-cli\\.js$\" || (echo '⚠️ Bruk npm ellers får du sparken! ⚠️' && echo && exit 1)",
-        "preinstall": "$npm_execpath --silent run checknpm",
-        "prepare": "husky",
-        "prettier": "prettier -c .",
-        "prettier:fix": "prettier -w .",
-        "release": "node sentry.js",
-        "start": "vite",
-        "svgo": "sh ./svgo.sh",
-        "test": "vitest --environment=jsdom --run",
-        "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build",
-        "ts": "tsc -b",
-        "up": "docker-compose up -d --remove-orphans --build"
-    },
-    "dependencies": {
-        "@hookform/resolvers": "3.10.0",
-        "@navikt/arbeidsgiver-notifikasjon-widget": "^7.2.3",
-        "@navikt/bedriftsmeny": "^7.0.6",
-        "@navikt/ds-css": "^7.18.0",
-        "@navikt/ds-react": "^7.18.0",
-        "@navikt/navspa": "^6.0.1",
-        "axios": "^1.8.4",
-        "axios-retry": "4.5.0",
-        "classnames": "^2.5.1",
-        "date-fns": "^4.1.0",
-        "lodash.debounce": "^4.0.8",
-        "lodash.isequal": "^4.5.0",
-        "prop-types": "^15.8.1",
-        "react": "^18.3.1",
-        "react-collapse": "^5.1.1",
-        "react-cookie": "^8.0.1",
-        "react-dom": "18.3.1",
-        "react-hook-form": "^7.55.0",
-        "react-loading-skeleton": "^3.5.0",
-        "react-responsive": "^10.0.1",
-        "react-router-dom": "^6.30.0",
-        "react-select": "^5.10.1",
-        "swr": "^2.3.3",
-        "zod": "^3.24.2"
-    },
-    "devDependencies": {
-        "@sentry/cli": "^2.43.0",
-        "@sentry/react": "^9.10.1",
-        "@storybook/addon-essentials": "^8.6.11",
-        "@storybook/blocks": "^8.6.11",
-        "@storybook/react": "^8.6.11",
-        "@storybook/react-vite": "^8.6.11",
-        "@storybook/test": "^8.6.11",
-        "@testing-library/react": "^16.2.0",
-        "@types/lodash.debounce": "^4.0.9",
-        "@types/lodash.isequal": "^4.5.8",
-        "@types/node": "^22.13.16",
-        "@types/react": "^18.3.11",
-        "@types/react-collapse": "^5.0.4",
-        "@types/react-dom": "18.3.1",
-        "@vitejs/plugin-react": "4.3.4",
-        "husky": "^9.1.7",
-        "jsdom": "^26.0.0",
-        "less": "^4.2.2",
-        "lint-staged": "^15.5.0",
-        "prettier": "^3.5.3",
-        "storybook": "^8.6.11",
-        "svgo": "^3.3.2",
-        "typescript": "^5.8.2",
-        "vite": "^6.2.4",
-        "vite-plugin-svgr": "^4.3.0",
-        "vitest": "^3.1.1"
-    },
-    "lint-staged": {
-        "*.{ts,tsx,js,jsx,mjs,less,css,md}": "npm run prettier:fix",
-        "*.svg": "npm run svgo"
-    }
+  "name": "tiltaksgjennomforing",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "/tiltaksgjennomforing",
+  "type": "module",
+  "scripts": {
+    "build": "vite build",
+    "checknpm": "echo \"$npm_execpath\" | grep -q \"npm-cli\\.js$\" || (echo '⚠️ Bruk npm ellers får du sparken! ⚠️' && echo && exit 1)",
+    "preinstall": "$npm_execpath --silent run checknpm",
+    "prepare": "husky",
+    "prettier": "prettier -c .",
+    "prettier:fix": "prettier -w .",
+    "release": "node sentry.js",
+    "start": "vite",
+    "svgo": "sh ./svgo.sh",
+    "test": "vitest --environment=jsdom --run",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "ts": "tsc -b",
+    "up": "docker-compose up -d --remove-orphans --build"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "3.10.0",
+    "@navikt/arbeidsgiver-notifikasjon-widget": "^7.2.3",
+    "@navikt/bedriftsmeny": "^7.0.6",
+    "@navikt/ds-css": "^7.18.0",
+    "@navikt/ds-react": "^7.18.0",
+    "@navikt/navspa": "^6.0.1",
+    "axios": "^1.8.4",
+    "axios-retry": "4.5.0",
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.3.1",
+    "react-collapse": "^5.1.1",
+    "react-cookie": "^8.0.1",
+    "react-dom": "18.3.1",
+    "react-hook-form": "^7.55.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-responsive": "^10.0.1",
+    "react-router-dom": "^6.30.0",
+    "react-select": "^5.10.1",
+    "swr": "^2.3.3",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@sentry/cli": "^2.43.0",
+    "@sentry/react": "^9.10.1",
+    "@storybook/react-vite": "^10.0.7",
+    "@testing-library/react": "^16.2.0",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/lodash.isequal": "^4.5.8",
+    "@types/node": "^22.13.16",
+    "@types/react": "^18.3.11",
+    "@types/react-collapse": "^5.0.4",
+    "@types/react-dom": "18.3.1",
+    "@vitejs/plugin-react": "4.3.4",
+    "husky": "^9.1.7",
+    "jsdom": "^26.0.0",
+    "less": "^4.2.2",
+    "lint-staged": "^15.5.0",
+    "prettier": "^3.5.3",
+    "storybook": "^10.0.7",
+    "svgo": "^3.3.2",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.4",
+    "vite-plugin-svgr": "^4.3.0",
+    "vitest": "^3.1.1",
+    "@storybook/addon-docs": "^10.0.7"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,mjs,less,css,md}": "npm run prettier:fix",
+    "*.svg": "npm run svgo"
+  }
 }
