chore. update dependencies
Co-authored-by: Magnus Rom <magnus.skalleberg.rom@nav.no>
Co-authored-by: Sindre <sindre.loken@nav.no>
Co-authored-by: Odd Andreas Sørsæther <oddsor@users.noreply.github.com>
Co-authored-by: Leif T <leif.thorbjornsen@nav.no>

--- a/package.json
+++ b/package.json
@@ -1,78 +1,78 @@
 {
-  "name": "tiltaksgjennomforing",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "/tiltaksgjennomforing",
-  "type": "module",
-  "scripts": {
-    "build": "vite build",
-    "checknpm": "echo \"$npm_execpath\" | grep -q \"npm-cli\\.js$\" || (echo '⚠️ Bruk npm ellers får du sparken! ⚠️' && echo && exit 1)",
-    "preinstall": "$npm_execpath --silent run checknpm",
-    "prepare": "husky",
-    "prettier": "prettier -c .",
-    "prettier:fix": "prettier -w .",
-    "release": "node sentry.js",
-    "start": "vite",
-    "svgo": "sh ./svgo.sh",
-    "test": "vitest --environment=jsdom --run",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "ts": "tsc -b",
-    "up": "docker-compose up -d --remove-orphans --build"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "3.10.0",
-    "@navikt/arbeidsgiver-notifikasjon-widget": "^7.2.3",
-    "@navikt/bedriftsmeny": "^7.0.6",
-    "@navikt/ds-css": "^7.18.0",
-    "@navikt/ds-react": "^7.18.0",
-    "@navikt/navspa": "^6.0.1",
-    "axios": "^1.8.4",
-    "axios-retry": "4.5.0",
-    "classnames": "^2.5.1",
-    "date-fns": "^4.1.0",
-    "lodash.debounce": "^4.0.8",
-    "lodash.isequal": "^4.5.0",
-    "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-collapse": "^5.1.1",
-    "react-cookie": "^8.0.1",
-    "react-dom": "18.3.1",
-    "react-hook-form": "^7.55.0",
-    "react-loading-skeleton": "^3.5.0",
-    "react-responsive": "^10.0.1",
-    "react-router-dom": "^6.30.0",
-    "react-select": "^5.10.1",
-    "swr": "^2.3.3",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@sentry/cli": "^2.43.0",
-    "@sentry/react": "^9.10.1",
-    "@storybook/react-vite": "^10.0.7",
-    "@testing-library/react": "^16.2.0",
-    "@types/lodash.debounce": "^4.0.9",
-    "@types/lodash.isequal": "^4.5.8",
-    "@types/node": "^22.13.16",
-    "@types/react": "^18.3.11",
-    "@types/react-collapse": "^5.0.4",
-    "@types/react-dom": "18.3.1",
-    "@vitejs/plugin-react": "4.3.4",
-    "husky": "^9.1.7",
-    "jsdom": "^26.0.0",
-    "less": "^4.2.2",
-    "lint-staged": "^15.5.0",
-    "prettier": "^3.5.3",
-    "storybook": "^10.0.7",
-    "svgo": "^3.3.2",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.4",
-    "vite-plugin-svgr": "^4.3.0",
-    "vitest": "^3.1.1",
-    "@storybook/addon-docs": "^10.0.7"
-  },
-  "lint-staged": {
-    "*.{ts,tsx,js,jsx,mjs,less,css,md}": "npm run prettier:fix",
-    "*.svg": "npm run svgo"
-  }
+    "name": "tiltaksgjennomforing",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "/tiltaksgjennomforing",
+    "type": "module",
+    "scripts": {
+        "build": "vite build",
+        "checknpm": "echo \"$npm_execpath\" | grep -q \"npm-cli\\.js$\" || (echo '⚠️ Bruk npm ellers får du sparken! ⚠️' && echo && exit 1)",
+        "preinstall": "$npm_execpath --silent run checknpm",
+        "prepare": "husky",
+        "prettier": "prettier -c .",
+        "prettier:fix": "prettier -w .",
+        "release": "node sentry.js",
+        "start": "vite",
+        "svgo": "sh ./svgo.sh",
+        "test": "vitest --environment=jsdom --run",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
+        "ts": "tsc -b",
+        "up": "docker-compose up -d --remove-orphans --build"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "5.2.2",
+        "@navikt/arbeidsgiver-notifikasjon-widget": "^7.2.3",
+        "@navikt/bedriftsmeny": "^7.0.6",
+        "@navikt/ds-css": "^7.33.2",
+        "@navikt/ds-react": "^7.33.2",
+        "@navikt/navspa": "^6.0.1",
+        "axios": "^1.13.2",
+        "axios-retry": "4.5.0",
+        "classnames": "^2.5.1",
+        "date-fns": "^4.1.0",
+        "lodash.debounce": "^4.0.8",
+        "lodash.isequal": "^4.5.0",
+        "prop-types": "^15.8.1",
+        "react": "^18.3.1",
+        "react-collapse": "^5.1.1",
+        "react-cookie": "^8.0.1",
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.66.0",
+        "react-loading-skeleton": "^3.5.0",
+        "react-responsive": "^10.0.1",
+        "react-router-dom": "^6.30.1",
+        "react-select": "^5.10.2",
+        "swr": "^2.3.6",
+        "zod": "^4.1.12"
+    },
+    "devDependencies": {
+        "@sentry/cli": "^2.58.1",
+        "@sentry/react": "^10.25.0",
+        "@storybook/addon-docs": "^10.0.7",
+        "@storybook/react-vite": "^10.0.7",
+        "@testing-library/react": "^16.3.0",
+        "@types/lodash.debounce": "^4.0.9",
+        "@types/lodash.isequal": "^4.5.8",
+        "@types/node": "^24.10.1",
+        "@types/react": "^18.3.26",
+        "@types/react-collapse": "^5.0.4",
+        "@types/react-dom": "^18.3.7",
+        "@vitejs/plugin-react": "5.1.1",
+        "husky": "^9.1.7",
+        "jsdom": "^27.2.0",
+        "less": "^4.4.2",
+        "lint-staged": "^16.2.6",
+        "prettier": "^3.6.2",
+        "storybook": "^10.0.7",
+        "svgo": "^4.0.0",
+        "typescript": "^5.9.3",
+        "vite": "^7.2.2",
+        "vite-plugin-svgr": "^4.5.0",
+        "vitest": "^4.0.8"
+    },
+    "lint-staged": {
+        "*.{ts,tsx,js,jsx,mjs,less,css,md}": "npm run prettier:fix",
+        "*.svg": "npm run svgo"
+    }
 }
